tdf#160427 native menu changes can only be done on the main thread

Change-Id: I7dbe9913eaa087e143acb95bdae625c69888c3dd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170308
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Tested-by: Jenkins
(cherry picked from commit 8e8036491ff0a6c2df2075af66609df17ee594cd)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170297
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>